--- a/backend/python/requirements.txt
+++ b/backend/python/requirements.txt
@@ -1,13 +1,22 @@
 blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
 click==8.1.8
 Flask==3.1.0
+flask-cors==5.0.1
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
 greenlet==3.1.1
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jsonify==0.5
 MarkupSafe==3.0.2
+pyngrok==7.2.3
+PyYAML==6.0.2
+requests==2.32.3
 SQLAlchemy==2.0.39
 typing_extensions==4.12.2
+urllib3==2.3.0
 Werkzeug==3.1.3
 WTForms==3.2.1
