--- a/backend/typescript/package.json
+++ b/backend/typescript/package.json
@@ -15,8 +15,11 @@
   "dependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.9",
+    "openmeteo": "^1.1.5",
     "puppeteer": "^24.4.0",
     "qrcode-terminal": "^0.12.0",
     "ts-node": "^10.9.2",
@@ -24,6 +27,8 @@
     "whatsapp-web.js": "^1.26.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/node-cron": "^3.0.11",
     "@types/qrcode-terminal": "^0.12.2"
   }
 }
