--- a/backend/typescript/package.json
+++ b/backend/typescript/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "description": "WhatsApp Web.js with Express TypeScript application",
   "dependencies": {
+    "@types/axios": "^0.9.36",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
+    "axios": "^1.8.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "node-cron": "^3.0.3",
