--- a/backend/typescript/package.json
+++ b/backend/typescript/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "@types/axios": "^0.9.36",
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.10",
     "axios": "^1.8.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.9",
     "openmeteo": "^1.1.5",
